[workspace]
members = [ "disrupted-data-client-rs", "disrupted-data-sdk-rs"]

[workspace.dependencies]
libp2p = { version = "0.53.2", features = ["full"] }
tokio = { version = "1.39.2", features = ["full"] }
bytes = { version = "1.7.1", features = ["std", "serde"] }
serde = { version = "1.0.204", features = ["derive"] }


[package]
name = "disrupted-data"
version = "0.0.1-prototype"
edition = "2021"
description = "Placeholder for disrupted data"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {workspace = true}
tokio = {workspace = true}
bytes = {workspace = true}
serde = {workspace = true}

disrupted-data-sdk-rs = {path = "./disrupted-data-sdk-rs"}
toml = "0.8.16"
tracing = "0.1.40"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.18"
uuid = { version = "1.10.0", features = ["v4"] }
clap = { version = "4.5.11", features = ["derive"] }
libp2p-stream = "0.1.0-alpha.1"
void = "1.0.2"
secp256k1 = { version = "0.29.0", features = ["rand-std"] }
hex = "0.4.3"
sha2 = "0.10.8"
